--- a/0x10 基本数据结构/位运算.md
+++ b/0x10 基本数据结构/位运算.md
@@ -71,7 +71,62 @@ int main()
 >
 > 所以运算时，将`ans`从`int`转为`long long `类型，这样不会出现越界情况。
 
+---
 
+### Raising Modulo Numbers
+
+**题目链接：**https://ac.nowcoder.com/acm/contest/996/B
+
+![image-20211224180823940](位运算.assets/image-20211224180823940.png)
+
+
+
+#### 思路
+
+快速幂求和。
+
+AC代码：
+
+```c++
+#include<cstdio>
+
+using namespace std;
+
+int quick_pow(int a, int b, int m)
+{
+    int ans = 1 % m;
+    
+    while(b)
+    {
+        if (b & 1) ans = (long long) ans * a % m;
+        a = (long long)a * a % m;
+        b >>= 1;
+    }
+    return ans;
+}
+
+
+int main()
+{
+    int n, m, h;
+    scanf("%d", &n);
+    
+    while(n --)
+    {
+        scanf("%d%d", &m, &h);
+        int x, y, ans = 0;
+        for (int i = 0; i < h; i ++)
+        {
+            scanf("%d%d", &x, &y);
+            ans = (ans + quick_pow(x, y, m)) % m;
+        }
+        printf("%d\n", ans);
+    }
+    return 0;
+}
+```
+
+---
 
 
 
