--- a/0x10基本数据结构/位运算.md
+++ b/0x10基本数据结构/位运算.md
@@ -2,11 +2,23 @@
 
 
 
+### 逻辑右移
+
+### 二进制状态压缩
+
+| 操作                                      | 运算                 |
+| ----------------------------------------- | -------------------- |
+| 取出整数n在二进制表示下的第k位            | `n >> k & 1`         |
+| 取出整数n在二进制表示下的第0~k-1位(后k位) | `n & ((1 << k) - 1)` |
+| 将整数n在二进制表示下的第k位取反          | `n ^ (1 << k)`       |
+| 将整数n在二进制表示下的第k位置为1         | `n | (1 << k)`       |
+| 将整数n在二进制表示下的第k位置为0         | ` n & (~(1 << k))`   |
+
 
 
 ## 习题
 
-### 计算$a^b$
+### 1、计算$a^b$
 
 ![image-20211223184211939](位运算.assets/image-20211223184211939.png)
 
@@ -73,7 +85,7 @@ int main()
 
 ---
 
-### Raising Modulo Numbers
+### 2、Raising Modulo Numbers
 
 **题目链接：** https://ac.nowcoder.com/acm/contest/996/B
 
@@ -127,6 +139,74 @@ int main()
 ```
 
 ---
+
+
+
+### 3、最短Hamilton路径（状压DP）
+
+[题目链接](https://ac.nowcoder.com/acm/contest/996/D)
+
+![image-20211224204521346](位运算.assets/image-20211224204521346.png)
+
+
+
+#### 思路
+
+用`f[i][j]`表示**点被经过的状态**对应的二进制数为`i`，且目前处在于点`j`时的最短路径。
+
+- 所有点恰好经过一次，用二进制`i`表示所有点的经过情况。
+  - 规定二进制中0表示未经过，1表示已经过。
+- 从`f[1][0]`开始一直到`f[(1 << n) - 1][ n - 1]`。
+
+
+
+#### 代码
+
+```c++
+#include<cstdio>
+#include<cstring>
+#include<algorithm>
+
+using namespace std;
+
+int main()
+{
+    int n;
+    scanf("%d", &n);
+    int a[n][n], f[1 << n][n];
+    
+    for (int i = 0; i < n; i ++)
+        for (int j = 0; j < n; j ++)
+            scanf("%d", &a[i][j]);
+    // 方便起见，将f初始化为无穷大
+    memset(f, 0x3f, sizeof f);
+    
+    // 初始化，在0点，f为0
+    f[1][0] = 0;
+    // 遍历所有的情况，
+    for (int i = 1; i < 1 << n; i ++)
+    {
+        for (int j = 0; j < n; j ++)
+        {
+            if (i >> j & 1) // 取出第j位，即判断i存储的路径中是否有j节点的存在，如果没有j节点，那么就不需要往下走了
+            {
+                for (int k = 0; k < n; k ++)
+                {
+                    // i^1<<j 将第j位取反，防止重复走
+                    // (i^1<<j) >> k & 1 取出第k位，第k位是否被经过
+                    if ((i ^ 1 << j) >> k & 1)
+                    {
+                        f[i][j] = min(f[i][j], f[i ^ 1 << j][k] + a[k][j]);
+                    }
+                }
+            }
+        }
+    }
+    
+    printf("%d\n", f[(1 << n) - 1][n - 1]);
+    return 0;
+}
+```
 
 
 
