finish weekly-contest-273.md

--- a/0x10基本数据结构/位运算.md
+++ b/0x10基本数据结构/位运算.md
@@ -4,6 +4,10 @@
 
 ### 逻辑右移
 
+
+
+
+
 ### 二进制状态压缩
 
 | 操作                                      | 运算                 |
@@ -13,6 +17,15 @@
 | 将整数n在二进制表示下的第k位取反          | `n ^ (1 << k)`       |
 | 将整数n在二进制表示下的第k位置为1         | `n | (1 << k)`       |
 | 将整数n在二进制表示下的第k位置为0         | ` n & (~(1 << k))`   |
+
+
+
+### 成对变换
+
+对于非负整数`n`：
+
+- 当`n`为偶数时，`n xor 1`等于`n + 1`
+- 当`n`为奇数时，`n xor 1`等于`n - 1`
 
 
 
